Perspective object. Set game background. Autosave.

--- a/Platformer/App.config
+++ b/Platformer/App.config
@@ -13,6 +13,12 @@
             <setting name="LastFilepath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="SaveDirectory" serializeAs="String">
+                <value>c:\platformer</value>
+            </setting>
+            <setting name="AutosaveFile" serializeAs="String">
+                <value>c:\platformer\autosave.asv.xml</value>
+            </setting>
         </Platformer.Properties.Settings>
     </userSettings>
 </configuration>
